[gd_scene load_steps=11 format=3 uid="uid://cgmfwrdnu35nr"]

[ext_resource type="Script" path="res://scripts/market/market.gd" id="1_iqbx2"]
[ext_resource type="Texture2D" uid="uid://b35m6yaabb0n2" path="res://assets/sprites/ui/Background .png" id="2_04stn"]
[ext_resource type="PackedScene" uid="uid://cl31w8ioka2uy" path="res://assets/game/market/market_item.tscn" id="2_pwd30"]
[ext_resource type="Texture2D" uid="uid://c8s1pmyikcjm" path="res://assets/sprites/towers/Magnifying Glass.png" id="3_rn332"]
[ext_resource type="Texture2D" uid="uid://dxsdmwkvjnpba" path="res://assets/sprites/towers/Swatter_icon.png" id="4_a7qwe"]
[ext_resource type="Texture2D" uid="uid://b1m1264ujmcb3" path="res://assets/sprites/towers/Zippo.png" id="4_uhfrn"]
[ext_resource type="Texture2D" uid="uid://1lv8gaa2as1h" path="res://assets/sprites/towers/sugar_cube_icon.png" id="6_yghrj"]
[ext_resource type="Texture2D" uid="uid://c87ul43a4govo" path="res://assets/sprites/towers/Mirror_icon.png" id="7_w5w5m"]
[ext_resource type="Texture2D" uid="uid://eiipul47m87y" path="res://assets/sprites/towers/spray_icon.png" id="8_f5t8j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_63wa1"]
atlas = ExtResource("2_04stn")
region = Rect2(0, 0, 70, 288)

[node name="Market" type="Control"]
z_index = 2000
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_iqbx2")
initial_money = 100
enable_market = true

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 1658.0
offset_right = 1923.0
offset_bottom = 1080.0
texture = SubResource("AtlasTexture_63wa1")
expand_mode = 4
stretch_mode = 4

[node name="MarketItem_MagnifyingGlass" parent="." instance=ExtResource("2_pwd30")]
layout_mode = 0
offset_left = 1684.0
offset_top = 855.0
offset_right = 1774.0
offset_bottom = 945.0
icon = ExtResource("3_rn332")
tower_name = "Magnifying Glass"
tower_desc = "Focuses the sunlight into a deadly beam in the direction the sun is facing."

[node name="MoneyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1684.0
offset_right = 1895.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 64
text = "$0"
horizontal_alignment = 2

[node name="MarketItem_Swatter" parent="." instance=ExtResource("2_pwd30")]
layout_mode = 0
offset_left = 1684.0
offset_top = 735.0
offset_right = 1774.0
offset_bottom = 825.0
icon = ExtResource("4_a7qwe")
tower_path = "res://assets/game/towers/tower_fly_swatter.tscn"
tower_name = "Fly Swatter"
cost = 24
sell_value = 12
tower_desc = "Repeatedly swats the ground, damaging any bugs in the area."

[node name="MarketItem_Flame" parent="." instance=ExtResource("2_pwd30")]
layout_mode = 0
offset_left = 1804.0
offset_top = 735.0
offset_right = 1894.0
offset_bottom = 825.0
icon = ExtResource("4_uhfrn")
tower_path = "res://assets/game/towers/tower_flamethrower.tscn"
tower_name = "Lighter"
cost = 36
sell_value = 18
tower_desc = "Emits a deadly flame, dealing damage over time to any bug in the area."

[node name="MarketItem_Sugar" parent="." instance=ExtResource("2_pwd30")]
layout_mode = 0
offset_left = 1684.0
offset_top = 615.0
offset_right = 1774.0
offset_bottom = 705.0
icon = ExtResource("6_yghrj")
tower_path = "res://assets/game/towers/tower_sugar.tscn"
tower_name = "Sugar Cube"
cost = 6
sell_value = 0
tower_desc = "Can be placed on the path to block it, until the bugs eat through it."

[node name="MarketItem_Mirror" parent="." instance=ExtResource("2_pwd30")]
layout_mode = 0
offset_left = 1804.0
offset_top = 855.0
offset_right = 1894.0
offset_bottom = 945.0
icon = ExtResource("7_w5w5m")
tower_path = "res://assets/game/towers/tower_mirror.tscn"
tower_name = "Mirror"
cost = 6
tower_desc = "Reflects beams of light from magnifying glasses. Can be chained together."

[node name="MarketItem_Spray" parent="." instance=ExtResource("2_pwd30")]
layout_mode = 0
offset_left = 1804.0
offset_top = 615.0
offset_right = 1894.0
offset_bottom = 705.0
icon = ExtResource("8_f5t8j")
tower_path = "res://assets/game/towers/tower_spray.tscn"
tower_name = "Bug Spray"
tower_desc = "Shoots bug spray on the ground, dealing damage to bugs that pass over."

[node name="TowerInfoPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 1684.0
offset_top = 255.0
offset_right = 1894.0
offset_bottom = 585.0

[node name="Name" type="Label" parent="TowerInfoPanel"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 195.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 24
text = "Super Cool Tower"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Cost" type="Label" parent="TowerInfoPanel"]
layout_mode = 0
offset_left = 15.0
offset_top = 105.0
offset_right = 195.0
offset_bottom = 135.0
theme_override_font_sizes/font_size = 18
text = "Cost:"
autowrap_mode = 2

[node name="SellPrice" type="Label" parent="TowerInfoPanel"]
layout_mode = 0
offset_left = 15.0
offset_top = 135.0
offset_right = 195.0
offset_bottom = 165.0
theme_override_font_sizes/font_size = 18
text = "Sell Price:"
autowrap_mode = 2

[node name="Description" type="Label" parent="TowerInfoPanel"]
layout_mode = 0
offset_left = 15.0
offset_top = 165.0
offset_right = 195.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 18
text = "blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah"
autowrap_mode = 2

[connection signal="mouse_entered" from="MarketItem_MagnifyingGlass" to="TowerInfoPanel" method="_on_market_item_magnifying_glass_mouse_entered"]
